test/fixtures/_snapshots/formatTest_errorTests.fb1aec29.0.snapshot
formatTest › errorTests › ./test/fixtures/formatTest/errorTests/lowercase_module.re
File \"./test/fixtures/formatTest/errorTests/lowercase_module.re\", line 1, characters 7-16:
1 | module lowercase = {};
           ^^^^^^^^^
Error: Module names must start with an uppercase letter.


